samples/_failures_safe/1761188269_4f8274_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d39d9b9.c: In function ‘main’:
./samples/SAFE/__tmp_4d39d9b9.c:160:28: error: missing terminating " character
  160 |                     printf("
      |                            ^
./samples/SAFE/__tmp_4d39d9b9.c:160:21: error: expected expression at end of input
  160 |                     printf("
      |                     ^~~~~~
./samples/SAFE/__tmp_4d39d9b9.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d39d9b9.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d39d9b9.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d39d9b9.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d39d9b9.c:160:21: error: expected declaration or statement at end of input
